Added createTempDir(), emptyDir(), delTree()
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/trunk@159 4f837ed2-42f5-46e7-a7a5-fa17313484d4