@@ -1,5 +1,5 @@
 /*
- * $Id: FileUtil.java,v 1.1 2002-08-31 06:58:16 tal Exp $
+ * $Id: FileUtil.java,v 1.2 2002-10-25 21:46:55 tal Exp $
  *
 
 Copyright (c) 2000-2002 Board of Trustees of Leland Stanford Jr. University,
@@ -33,6 +33,7 @@ package org.lockss.test;
 import java.util.*;
 import java.io.*;
 import java.net.*;
+import java.security.*;
 
 /** Utilities for Files
  */
@@ -60,7 +61,76 @@ public class FileUtil {
   /** Store the string in a temp file and return a file: url for it */
   public static String urlOfString(String s) throws IOException {
     File file = FileUtil.writeTempFile("test", s);
-    URL url = new URL("file", null, file.getAbsolutePath());
-    return url.toString();
+    return file.toURL().toString();
+  }
+
+  private static final Object tmpFileLock = new Object();
+  private static int tmpFileCnt = -1; /* Protected by tmpFileLock */
+
+  private static File generateFile(String prefix, String suffix, File dir)
+      throws IOException {
+    if (tmpFileCnt == -1) {
+      tmpFileCnt = new Random().nextInt() & 0xffff;
+    }
+    tmpFileCnt++;
+    return new File(dir, prefix + Integer.toString(tmpFileCnt) + suffix);
+  }
+
+  /** Create an empty directory.  Details are the same as
+   * File.createTempFile(), but the File object returned is a directory.
+   * @return The newly created directory */
+  public static File createTempDir(String prefix, String suffix,
+				   File directory)
+      throws IOException {
+    if (prefix == null) throw new NullPointerException();
+    if (prefix.length() < 3)
+      throw new IllegalArgumentException("Prefix string too short");
+    String s = (suffix == null) ? ".tmp" : suffix;
+    synchronized (tmpFileLock) {
+      if (directory == null) {
+	directory = new File(System.getProperty("java.io.tmpdir"));
+      }
+      File f = null;
+      for (int ix = 0; ix < 1000; ix++) {
+	f = generateFile(prefix, s, directory);
+	if (f.mkdir()) {
+	  return f;
+	}
+      }
+      throw new IOException("Couldn't create temp dir " + f.getPath());
+    }
+  }
+
+  /** Create an empty directory in the default temporary-file directory.
+   * Details are the same as File.createTempFile(), but the File object
+   * returned is a directory.
+   * @return The newly created directory
+   */
+  public static File createTempDir(String prefix, String suffix)
+      throws IOException {
+    return createTempDir(prefix, suffix, null);
+  }
+
+  /** Delete the contents of a directory, leaving the empty directory.
+   * @return true iff successful */
+  public static boolean emptyDir(File dir) {
+    String files[] = dir.list();
+    boolean ret = true;
+    for (int i = 0; i < files.length; i++) {
+      File f = new File(dir, files[i]);
+      if (f.isDirectory()) {
+	ret = ret && emptyDir(f);
+      }
+      if (!f.delete()) {
+	ret = false;
+      }
+    }
+    return ret;
+  }
+
+  /** Delete a directory and its contents.
+   * @return true iff successful */
+  public static boolean delTree(File dir) {
+    return emptyDir(dir) && dir.delete();
   }
 }
